2006-04-06  Viktor Griph  <griph@dd.chalmers.se>

	* fvwm/fvwm.1.in:
	changed description of the fvwmstyle resource usage
	to state that it's used in addition to the other
	matches
	* fvwm/style.c (fw_match_style_id):
	fixed a typo in style_name matching

2006-04-06  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/style.c (fw_match_style_id):
	reformatted code and fixed a warning

2006-04-04  Serge Koksharov  <gentoosiast dog yandex dot ru>

	* ChangeLog:
	* bin/ChangeLog:
	* libs/Fft.c (FftGetFont):
	* libs/System.c:
	corrected typos

	* libs/System.c (fvwm_mkstemp):
	because of typo in the 'ifdef' pragma underlying OS's 'mkstemp'
	function was never used, even if it was considered secure by configure
	script.

2006-04-05  Viktor Griph  <griph@dd.chalmers.se>

	* AUTHORS:
	added some more suff to the list of what I've done.
	* NEWS:
	* fvwm/fvwm.1.in:
	* fvwm/add_window.c (__add_window_handle_x_resources)
	(destroy_window, AddWindow):
	* fvwm/fvwm.h (FvwmWindow):
	added fvwmstyle resource to override style name

2006-03-27  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/menus.c (pop_menu_up):
	as documented, do not warp to title for root menus with TitleWarp

2006-03-21  Serge Koksharov  <gentoosiast dog yandex dot ru>

	* fvwm/fvwm.1.in:
	Removed duplicated 'NoIcon' style option description in the end
	of the `The Style command...' section.
	Removed `Recapture True' option setting in example of BusyCursor
	description, because `Recapture' isn't valid option of `BusyCursor'
	command anymore.
	Updated ewmh specification URL (the old was 404)
	Added URL to ICCCM 2.0 manual

	* modules/FvwmAnimate/FvwmAnimate.c:
	corrected delay for Zoom3D animation effect

	* modules/FvwmConsole/FvwmConsoleC.pl.1.in:
	* modules/FvwmConsole/FvwmConsole.1.in:
	replaced all `Cntl' modificator key mentions with `Ctrl' to be
	consistent with rest of the documentation and because it's more
	conventional abbreviation.

	* modules/FvwmTaskBar/FvwmTaskBar.1.in: