@@ -51,9 +51,9 @@ done
 PATH=/bin:/usr/bin:/usr/local/bin:$PATH
 export PATH
 
-: ${EDITOR=emacs}
+: ${EDITOR:=vi}
 
-TEMP=`mktemp -q "/tmp/fvwm-bug.XXXXXX"`
+TEMP=`mktemp -q "${TMPDIR:-/tmp}/fvwm-bug.XXXXXX"`
 
 # Figure out how to echo a string without a trailing newline
 N=`echo 'hi there\c'`
@@ -66,7 +66,7 @@ trap 'rm -f $TEMP $TEMP.x; exit 1' 1 2 3 13 15
 trap 'rm -f $TEMP $TEMP.x' 0
 
 # Who is mail from?
-: ${USER=${LOGNAME-`whoami`}}
+: ${USER:=${LOGNAME:-`whoami`}}
 
 # Who is mail to?
 if test x"$address" = x; then
@@ -107,7 +107,7 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 datadir=@datadir@
 libexecdir=@libexecdir@
-: ${FVWM_USERDIR=unset}
+: ${FVWM_USERDIR:=unset}
 FVWM_DATADIR=@FVWM_DATADIR@
 FVWM_MODULEDIR=@FVWM_MODULEDIR@
 
